--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body {
+  background-color: #121212; /* Dark background */
+  color: white; /* White text for contrast */
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+mat-toolbar {
+  background-color: #1e1e1e; /* Dark toolbar */
+}
