--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -61,8 +61,12 @@ h2 {
   font-weight: bold;
 }
 
+.slide-toggle {
+  margin-bottom: 15px;
+}
+
 /* Input fields */
-input[type="text"], input[type="number"] {
+input[type="text"], input[type="number"], input[type="url"]  {
   width: calc(100% - 20px);
   padding: 10px;
   margin-bottom: 10px;
