Animation now working

--- a/src/app/drink-chart/drink-chart.component.html
+++ b/src/app/drink-chart/drink-chart.component.html
@@ -2,6 +2,7 @@
   <div class="chart">
     <canvas id="canvas"></canvas>
   </div>
+  <app-price-drop [drink]="priceDropData[0]"></app-price-drop>
   <div class="chart">
     <h3 class="pie-title">Verkaufsanteil der Getränke</h3>
     <canvas id="myPieChart"></canvas> <!-- Canvas für das Piechart -->
