--- a/src/app/pos/pos.component.html
+++ b/src/app/pos/pos.component.html
@@ -3,7 +3,7 @@
   <div class="drink-list">
     <div *ngFor="let drink of drinks; let i = index" class="drink-item" (click)="incrementSales(drink.name)">
       <h3>{{ drink.name }}</h3>
-      <p *ngIf="this.ds.isLocal()">Sales Count: {{ salesCount[drink.name][anzahlLabels] }}</p>
+      <p>Sales Count: {{ this.dataService.getTotalSalesCountOfDrink(drink.name) }}</p>
     </div>
   </div>
 </div>
