--- a/src/app/pos/pos.component.html
+++ b/src/app/pos/pos.component.html
@@ -1,5 +1,14 @@
 <div class="sales-tracker">
   <h2>Sales Tracker</h2>
+  <button class="input-multiple-button" (click)="resetMultiple()">
+    <h3>Reset to 1</h3>
+  </button>
+  <div [ngClass]="{'drink-item':true, 'input-multiple-button':true}"
+       (click)="triggerInputMultiple()">
+    <h3>
+      {{ 'Click to increase:  ' + multiple + ' X' }}
+    </h3>
+  </div>
   <div class="drink-list">
     <div *ngFor="let drink of drinks; let i = index" class="drink-item" (click)="incrementSales(drink.name)">
       <h3>{{ drink.name }}</h3>
